--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,13 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
+springBoot {
+    mainClass = 'com.example.mqttbrokerapi.MqttBrokerApiApplication'
+}
+
+apply plugin: 'groovy'
+apply plugin: 'java'
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
